working on introduction

--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -27,16 +27,15 @@ bibliography: '`r system.file("docs", "Sardine.bib", package = "SardineForecast"
 # Introduction
 
 <!-- indian oil sardine is important -->
-The Indian oil sardine (*Sardinella longiceps* Valenciennes, 1847) is one of the most commercially important fish resources along the southwest coast of India (Figure `r \ref{fig:studyarea}`) and comprises ca 25% of the catch biomass [ref].
-Landings of the Indian oilsardine are highly seasonal and peak during and after the summer monsoon period (June through September), in conjunction with the onset and early relaxation of coastal upwelling. However, the landings of this small pelagic finfish are also highly variable from year to year.  Small pelagics often exhibit high variability due to the effects of environmental conditions on survival and recruitment [@Checkleyetal2009].  In addition, the Indian oil sardine fishery is largely coastal and artisanal thus migration of fish schools in and out of the coastal zone greatly affects exposure to the fishery.
+The Indian oil sardine (*Sardinella longiceps* Valenciennes, 1847) is one of the most commercially important fish resources along the southwest coast of India (Figure `r \ref{fig:studyarea}`) and comprises ca 25% of the catch biomass [@Vivekanandanetal2003].  Landings of the Indian oilsardine are highly seasonal and peak during and after the summer monsoon period (June through September), in conjunction with the onset and early relaxation of coastal upwelling. However, the landings of this small pelagic finfish are also highly variable from year to year.  Small pelagics often exhibit high variability due to the effects of environmental conditions on survival and recruitment [@Checkleyetal2009].  In addition, the Indian oil sardine fishery is largely coastal and artisanal thus migration of fish schools in and out of the coastal zone greatly affects exposure to the fishery.
 
-Researchers have examined a variety of environmental variables for their correlation with landings of the Indian oil sardine.  Precipitation during the southwest monsoon [@MurtyEdelman1966; @AntonyRaja1969; @AntonyRaja1972; @Jayaprakash2002] and the day of the monsoon arrival [@Jayaprakash2002] have been widely examined and correlations found, but the reported effects are positive in some studies and negative in others. Precipitation is correlated with monsoon winds which trigger upwelling but may also affect salinity and act as a direct or indirect cue for spawning.  Researchers have also found correlations with various metrics of upwelling intensity during the post-monsoon period [@LonghurstWooster1990; @Madhupratapetal1994; @Jayaprakash2002; @Krishnakumaretal2008; @Thara2011] and with direct measures of productivity, such as nearshore plankton abundance and chlorophyll-a density [@Hornell1910; @Nair1952; @NairSubrahmanyan1955; @Madhupratapetal1994; @Georgeetal2012].  Researchers have also found correlations with sea surface temperature (SST); SST  can affect both somatic growth rates and juvenile survival but also can cause fish to move off-shore and away from the shore-based fishery [@Annigeri1969; @PrabhuDhulkhed1970; @Pillai1991].
+Researchers have examined a variety of environmental variables for their correlation with landings of the Indian oil sardine.  Precipitation during the southwest monsoon [@MurtyEdelman1966; @AntonyRaja1969; @AntonyRaja1972; @Jayaprakash2002] and the day of the monsoon arrival [@Jayaprakash2002] have been widely examined and correlations found, but the reported effects are positive in some studies and negative in others. Precipitation is correlated with monsoon winds which trigger upwelling but may also affect salinity and act as a direct or indirect cue for spawning.  Researchers have also found correlations with various metrics of upwelling intensity during the post-monsoon period [@LonghurstWooster1990; @Madhupratapetal1994; @Jayaprakash2002; @Krishnakumaretal2008; @Thara2011] and with direct measures of productivity, such as nearshore zooplankton and phytoplankton abundance [@Hornell1910; @Nair1952; @NairSubrahmanyan1955; @Madhupratapetal1994; @Georgeetal2012].  Researchers have also found correlations with sea surface temperature (SST); SST  can affect both somatic growth rates and juvenile survival but also can cause fish to move off-shore and away from the shore-based fishery [@Annigeri1969; @PrabhuDhulkhed1970; @Pillai1991].
 
 <!-- objective of the paper -->
-In this paper, we revisit the analysis of environmental covariates that correlate with oil sardine catch using seasonal, as opposed to yearly, landings data, remote-sensing data and generalized additive modelling.  Based on biological information concerning how environmental conditions in the coastal waters affect spawning density, exposure of sardines to the coastal fishery, and larval and juvenile sardine survival, we develop a set of hypotheses about which remote-sensing covariates should correlate with current or future landings.  We use generalized additive modelling of the long-term landing data with long-term remote-sensing data to test for these correlations.  
+In this paper, we revisit the analysis of environmental covariates that correlate with oil sardine catch using data from 1983 to 2015 on seasonal landings and environmental conditions from remote-sensing.  Based on biological information concerning how environmental conditions in the coastal waters affect spawning density, exposure of sardines to the coastal fishery, and larval and juvenile sardine survival, we develop a set of hypotheses about which remote-sensing covariates should correlate with current or future landings.  We use generalized additive modelling of the landing data with remote-sensing covariates to test for these correlations.  
 
 <!-- study area -->
-We focus on the Kerala coast (Figure `r ref("fig:studyarea")`) region of India, where the majority of the Indian oil sardines are landed and where oil sardines comprise ca. 40% of the marine fish catch [@Srinath1998]. This area is in the Southeast Arabian Sea (SEAS), one of world’s major upwelling zones, with seasonal peaks in primary productivity driven by upwelling caused by winds during the Indian summer monsoon [@Madhupratapetal2001; @Habeebrehmanetal2008] between June and September. Within the SEAS, the coastal zone off Kerala between 9$^\circ$N to 13$^\circ$N has especially intense upwelling due to the combined effects of wind stress and remote forcing [@Smitha2010; @Smithaetal2008].  The result is a strong temperature differential between the near-shore and off-shore and high primary productivty and chlorophyll in this region [@Madhupratapetal2001;  @Habeebrehmanetal2008; @Jayarametal2010; @Smitha2010; @Raghavanetal2010; @Chauhanetal2011].  The primary productivity peaks subside after September while mesozooplankton abundances increase and remain high in the inter-monsoon period [@Madhupratapetal2001].
+We focus on the Kerala coast (Figure `r ref("fig:studyarea")`) region of India, where the majority of the Indian oil sardines are landed and where oil sardines comprise ca. 40% of the marine fish catch [@Srinath1998; @Vivekanandanetal2003]. This area is in the Southeast Arabian Sea (SEAS), one of world’s major upwelling zones, with seasonal peaks in primary productivity driven by upwelling caused by winds during the Indian summer monsoon [@Madhupratapetal2001; @Habeebrehmanetal2008] between June and September. Within the SEAS, the coastal zone off Kerala between 9$^\circ$N to 13$^\circ$N has especially intense upwelling due to the combined effects of wind stress and remote forcing [@Smitha2010; @Smithaetal2008].  The result is a strong temperature differential between the near-shore and off-shore and high primary productivty and chlorophyll in this region [@Madhupratapetal2001;  @Habeebrehmanetal2008; @Jayarametal2010; @Smitha2010; @Raghavanetal2010; @Chauhanetal2011].  The primary productivity peaks subside after September while mesozooplankton abundances increase and remain high in the inter-monsoon period [@Madhupratapetal2001].
 
 <!-- life cycle of the oil sardine -->
 The life cycle  of the oil sardine fishery begins with the entry of adult fish into the inshore areas during June – July, corresponding with the onset of the southwest monsoon [@Chidambaram1950; @AntonyRaja1969] and restricted along the narrow strip of the western India continental shelf, within 20 km from the shore. The fish migrate from offshore to coastal waters and vice versa coinciding with the prevailing wind conditions [@Hornell1910]. A gradual increase in temperature ranging from 26 to 28°C is favorable for their inshore migration [@Chidambaram1950]. According to Nair et al. [-@Nairetal2016], the exact location of oil sardine spawning grounds along the Indian coastline is still unclear; however, it is generally believed that the spawning of oil sardine occurs during the southwest monsoon period (Jun-Jul) when temperature, salinity and suitable food availability are conducive for larval survival [@MurtyEdelman1966; @JayaprakashPillai2000; @Krishnakumaretal2008], although some studies suggest that spawning can occur as late as  September [@AntonyRaja1969; @Hornell1910; @HornellNayudu1923; @PrabhuDhulkhed1970].
